# internal/adapters/in/http/register_handler.go
@@ -42,6 +42,7 @@ func (a *APIHandler) Register(ctx context.Context, request servers.RegisterReque
 			Id:    result.User.ID,
 			Email: result.User.Email,
 			Name:  result.User.Name,
+			Phone: &result.User.Phone,
 		},
 	}), nil
 }
